# blonjo

./: .env.example  .gitignore  GEMINI.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  test_db.py  test_match.js
sajen/: Dockerfile  README.md  app.db  check_enum.py  debug_ai.py  dry_run_ai_switch.py  fix_inventory.py  pyproject.toml  test_accounting_logic.py  test_complex_tax_logic.py  test_master_data_logic.py  test_parse.py  test_summary_input.py  test_summary_input_v2.py  test_tesseract_pipeline.py
sajen/app/: main.py  qa_suite.py  seed.py  seed_coa.py  seed_coa_clean.py  seed_final_clean_psak.py  seed_final_psak.py  seed_fix_capital.py  seed_fix_cash_count.py  seed_legal_template.py  seed_master_data.py  seed_psak_complete.py  seed_psak_complete_v2.py  seed_psak_mappings.py  seed_voice_rules.py
sajen/app/api/: deps.py
sajen/app/core/: celery_app.py  config.py  context.py  database.py  redis.py  security.py
sajen/app/models/: __init__.py  accounting.py  base.py  inventory.py  log.py  ocr.py  permission.py  role.py  setting.py  tenant.py  user.py
sajen/app/schemas/: accounting.py  inventory.py  material_control.py  ocr.py  reports.py  role.py  setting.py  tenant.py  token.py  user.py
sajen/app/services/: accounting.py  ai_context.py  ai_engine.py  coa_cache.py  inventory.py  material_control.py  mcp_client.py  pricing_engine.py  reports.py  smart_parser.py
sajen/app/utils/: text_processing.py
sajen/app/workers/: ocr_worker.py
sajen/migrations/: env.py
sajen/migrations/versions/: 05b565c0fb6e_add_ocr_models.py  16c4b1b11f18_add_new_transaction_types_to_enum.py  16e96fcde85d_add_usage_count_to_ai_learning_templates.py  (+23 more)
(+451 files in other folders)
