[project]
name = "sajen-backend"
version = "0.1.0"
description = "FastAPI backend for Sajen Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.9",
    "ollama>=0.1.7",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.9.0.80",
    "shapely>=2.0.3",
    "pgvector>=0.2.4",
    "google-genai",
    "xhtml2pdf>=0.2.16",
    "fpdf2>=2.7.8",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
